# wasm-life-game

./: .prettierrc.toml  README.md  index.html  package.json  tsconfig.json  vite.config.js
scripts/: install_prereq.sh
src/: main.css  main.ts
src/game/: index.ts  logic.ts  perf.ts  render.ts
src/game/renderer/: cell.ts  cells.ts  cursor.ts  grid.ts  index.ts
wasm/wasm-life/: Cargo.toml
wasm/wasm-life/src/: lib.rs
